# sway.module_loader-png

./: .gitmodules  CMakeLists.txt  CMakePresets-defaults.json  README.md
lib/cxx/include/sway/loader/png/: pngplugin.hpp
lib/cxx/src/: pngplugin.cpp
lib/cxx/tests/google/: CMakeLists.txt  README.md  loader.spec.cpp
lib/include/sway/loader/: png.hpp
lib/include/sway/loader/png/: loaderplugin.hpp  pnghandler.hpp  pngplugin.hpp
lib/src/: pnghandler.cpp  pngplugin.cpp
lib/tests/google/: CMakeLists.txt  README.md
